<resources>
    <string name="app_name">PubspotX</string>
    <string name="addPubTitle">Welcome</string>
    <string name="addPubSubtitle">Add and rate a pub...</string>
    <string name="editPubTitle">Welcome</string>
    <string name="editPubSubtitle">Edit this pub</string>
    <string name="addButton">Add</string>
    <string name="pubListTitle">Pubs</string>
    <string name="action_addPub">Add Pub</string>
    <string name="action_listPubs">List Pubs</string>
    <string name="action_theme">Theme</string>
    <string name="group_preferences">Preferences</string>

    <string name="nav_header_title">PubspotX</string>
    <string name="nav_header_subtitle">loggedinuser@pubspot.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="action_about">About PubspotX</string>
    <string name="aboutus_title">PubspotX</string>
    <string name="aboutus_message">Welcome to PubspotX!\n\nLog and rate your favourite pubs!\n\n Enjoy alcohol responsibly!!</string>

    <string name="pubsNotFound">No pubs Yet…\nGo add some pubs!</string>
    <string name="addPubError">Error : Couldn\'t Add a Pub…</string>
    <string name="pubDetails">Pub Details</string>

    <string name="name">Name</string>
    <string name="rating">Rating</string>
    <string name="description">Description</string>

    <string name="update">Update</string>
    <string name="delete">Delete</string>

    <string name="dialog_set_theme">Select Theme</string>
    <string name="choice_theme_light">Light mode</string>
    <string name="choice_theme_dark">Dark mode</string>
    <string name="choice_theme_system">System default</string>

    <string name="messageLoading">Please Wait while Pubs are Loading...</string>

    <string name="select_profile_image">Select Profile Image</string>

    <!-- START Firebase Resources-->

    <string name="label_emailpassword">Email/Password Authentication</string>
    <string name="desc_emailpassword">Use an email and password to authenticate with Firebase.</string>
    <string name="sign_in">Sign In</string>
    <string name="create_account">Create Account</string>
    <string name="send_link">Send Link</string>
    <string name="sign_out">Sign Out</string>
    <string name="verify_email">Verify Email</string>
    <string name="disconnect">Disconnect</string>
    <string name="loading">Loading…</string>
    <string name="signed_in">Signed In</string>
    <string name="signed_out">Signed Out</string>
    <string name="token_null">Token: null</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="desc_firebase_lockup">Firebase logo and name</string>
    <string name="auth_failed">Authentication failed</string>
    <string name="firebase_status_fmt">Firebase User: %s</string>
    <string name="firebase_user_management">Firebase User Management</string>
    <string name="emailpassword_status_fmt">Email User: %1$s (verified: %2$b)</string>
    <string name="emailpassword_title_text">Please Login Below</string>
    <string name="pub_name">Pub name</string>
    <string name="pub_description">Pub description</string>
    <string name="action_togglepubs">action_togglePubs</string>
    <string name="action_search">Search</string>
</resources>